Final refactor and python file

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -122,15 +122,15 @@
     "\n",
     "    for i in range(observation_count-2, -1, -1):\n",
     "        for k in range(state_count):\n",
-    "            prob = 0\n",
-    "            for l in range(state_count):\n",
-    "                prob += beta[l, i+1] * state_transition_matrix[k,l] * emission_matrix[l, i]\n",
+    "            prob = sum(\n",
+    "                beta[l, i + 1]\n",
+    "                * state_transition_matrix[k, l]\n",
+    "                * emission_matrix[l, i]\n",
+    "                for l in range(state_count)\n",
+    "            )\n",
+    "\n",
     "            beta[k,i] = prob\n",
     "        beta[:,i] /= np.sum(beta[:,i])\n",
-    "    # for i in range(observation_count-2, -1, -1):\n",
-    "    #     prob = beta[:, i+1] * state_transition_matrix.T * emission_matrix[:, i+1].reshape(-1,1)\n",
-    "    #     beta[:,i] = np.sum(prob, axis=1)\n",
-    "    #     beta[:,i] /= np.sum(beta[:,i])\n",
     "\n",
     "    return beta"
    ],
