Loading cifar dataset

--- a/Offline 3/1605053.ipynb
+++ b/Offline 3/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "from mlxtend.data import loadlocal_mnist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "def process_mnist_data() -> (np.ndarray, np.ndarray, np.ndarray, np.ndarray):\n",
@@ -40,11 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "outputs": [],
    "source": [
-    "def process_cifar_dataset():\n",
-    "    cifar_path = './cifar-10-python/cifar-10-batches-py'"
+    "def unpickle(file):\n",
+    "    with open(file, 'rb') as fo:\n",
+    "        data_dict = pickle.load(fo, encoding='bytes')\n",
+    "    return data_dict"
    ],
    "metadata": {
     "collapsed": false,
@@ -55,7 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "def process_cifar_dataset():\n",
+    "    cifar_path = './cifar-10-python/cifar-10-batches-py'\n",
+    "    for i in range(1,6):\n",
+    "        data_batch = unpickle(cifar_path + '/data_batch_' + str(i))\n",
+    "        print(data_batch.keys())\n",
+    "        train_images, train_labels  = data_batch[b'data'], data_batch[b'labels']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "def process_toy_dataset():\n",
@@ -70,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "outputs": [
     {
      "name": "stdout",
