Started convolution layer

--- a/Offline 3/1605053.ipynb
+++ b/Offline 3/1605053.ipynb
@@ -96,11 +96,17 @@
    "outputs": [],
    "source": [
     "class ConvolutionLayer:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, output_channel_count:int, filter_dimension:int, stride:int, padding:int):\n",
+    "        self.output_channel_count = output_channel_count\n",
+    "        self.filter_dimension = filter_dimension\n",
+    "        self.stride = stride\n",
+    "        self.padding = padding\n",
     "\n",
-    "    def forward(self):\n",
-    "        pass\n",
+    "    def forward(self, input_image: np.ndarray):\n",
+    "        input_dimentions = input_image.shape[0]\n",
+    "        output_dimentions = (input_dimentions - self.filter_dimension + self.padding) // self.stride + 1\n",
+    "\n",
+    "        output = np.zeros((self.output_channel_count, output_dimentions, output_dimentions))\n",
     "\n",
     "    def backward(self):\n",
     "        pass"
