--- a/Offline 3/1605053.ipynb
+++ b/Offline 3/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def process_mnist_data() -> (np.ndarray, np.ndarray, np.ndarray, np.ndarray):\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def unpickle(file):\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def process_cifar_dataset():\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def process_toy_dataset():\n",
@@ -92,22 +92,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "class ConvolutionLayer:\n",
     "    def __init__(self, output_channel_count:int, filter_dimension:int, stride:int, padding:int):\n",
     "        self.output_channel_count = output_channel_count\n",
     "        self.filter_dimension = filter_dimension\n",
+    "        self.filters = np.random.random((\n",
+    "            self.output_channel_count,\n",
+    "            self.filter_dimension,\n",
+    "            self.filter_dimension\n",
+    "        ))\n",
     "        self.stride = stride\n",
     "        self.padding = padding\n",
     "\n",
     "    def forward(self, input_image: np.ndarray):\n",
     "        input_dimentions = input_image.shape[0]\n",
-    "        output_dimentions = (input_dimentions - self.filter_dimension + self.padding) // self.stride + 1\n",
+    "        output_dimentions = (input_dimentions - self.filter_dimension + 2 * self.padding) // self.stride + 1\n",
+    "        input_shape = input_image.shape\n",
+    "\n",
+    "        # Pad the image\n",
+    "        padded_image = np.zeros((\n",
+    "            input_shape[0]+self.padding,\n",
+    "            input_shape[1]+self.padding,\n",
+    "            input_shape[2]\n",
+    "        ))\n",
+    "\n",
+    "        # Padding variables\n",
+    "        x_min = self.padding\n",
+    "        x_max = x_min + input_shape[0]\n",
+    "        y_min = self.padding\n",
+    "        y_max = y_min + input_shape[1]\n",
+    "\n",
+    "        padded_image[x_min:x_max, y_min:y_max, :] = input_image\n",
+    "        padded_dimensions = padded_image.shape\n",
     "\n",
     "        output = np.zeros((self.output_channel_count, output_dimentions, output_dimentions))\n",
     "\n",
+    "        for i in range(self.output_channel_count):\n",
+    "            image_y = out_y = 0\n",
+    "            while image_y + self.filter_dimension <= padded_dimensions[1]:\n",
+    "                image_x = out_x = 0\n",
+    "                while image_x + self.filter_dimension <= padded_dimensions[0]:\n",
+    "                    image_slice = padded_image[image_x:image_x+self.filter_dimension, image_y:image_y+self.filter_dimension, :]\n",
+    "                    output[i, out_x, out_y] = np.sum(image_slice * self.filters[i])\n",
+    "                    image_x += self.stride\n",
+    "                    out_x += 1\n",
+    "                image_y += self.stride\n",
+    "                out_y += 1\n",
+    "                \n",
+    "        return output\n",
+    "    \n",
     "    def backward(self):\n",
     "        pass"
    ],
@@ -120,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "class ActivationLayer:\n",
@@ -135,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "class MaxPoolingLayer:\n",
@@ -150,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "class FullyConnectedLayer:\n",
@@ -165,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "class FlatteningLayer:\n",
@@ -180,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "class SoftmaxLayer:\n",
@@ -195,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
