Max pooling backward done and full forward pass works

--- a/Offline 3/1605053.ipynb
+++ b/Offline 3/1605053.ipynb
@@ -234,16 +234,16 @@
     "        for line in lines:\n",
     "            tokens = line.split()\n",
     "            if tokens[0] == 'Conv':\n",
-    "                model.append(ConvolutionLayer(int(tokens[1]), int(tokens[2]), int(tokens[3]), int(tokens[4])))\n",
+    "                model.append(ConvolutionLayerBatch(int(tokens[1]), int(tokens[2]), int(tokens[3]), int(tokens[4])))\n",
     "            if tokens[0] == 'ReLU':\n",
     "                model.append(ActivationLayer())\n",
     "            if tokens[0] == 'Pool':\n",
-    "                model.append(MaxPoolingLayer(int(tokens[1]), int(tokens[2])))\n",
+    "                model.append(MaxPoolingLayerBatch(int(tokens[1]), int(tokens[2])))\n",
     "            if tokens[0] == 'FC':\n",
-    "                model.append(FlatteningLayer())\n",
-    "                model.append(FullyConnectedLayer(int(tokens[1])))\n",
+    "                model.append(FlatteningLayerBatch())\n",
+    "                model.append(FullyConnectedLayerBatch(int(tokens[1])))\n",
     "            if tokens[0] == 'Softmax':\n",
-    "                model.append(SoftmaxLayer())\n",
+    "                model.append(SoftmaxLayerBatch())\n",
     "        return model"
    ],
    "metadata": {
@@ -463,7 +463,8 @@
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    def forward(self, input_matrix: np.ndarray) -> np.ndarray:\n",
+    "    @staticmethod\n",
+    "    def forward(input_matrix: np.ndarray) -> np.ndarray:\n",
     "        return relu(input_matrix)\n",
     "\n",
     "    def backward(self):\n",
@@ -581,15 +582,16 @@
     "    def __init__(self, filter_dimension: int, stride: int):\n",
     "        self.filter_dimension = filter_dimension\n",
     "        self.stride = stride\n",
-    "        self.index_tracker = None\n",
+    "        self.mask = None\n",
+    "        self.input_dimensions = None\n",
     "\n",
     "    def forward(self, image: np.ndarray) -> np.ndarray:\n",
     "        input_dimensions = image.shape\n",
+    "        self.input_dimensions = input_dimensions\n",
     "        output_dimension = (input_dimensions[2] - self.filter_dimension) // self.stride + 1\n",
     "\n",
     "        output = np.zeros((input_dimensions[0], input_dimensions[1], output_dimension, output_dimension))\n",
-    "        if not self.index_tracker:\n",
-    "            self.index_tracker = np.zeros((input_dimensions[0], input_dimensions[1], output_dimension, output_dimension))\n",
+    "        self.mask = np.zeros(input_dimensions)\n",
     "\n",
     "        for i in range(input_dimensions[0]):\n",
     "            image_y = out_y = 0\n",
@@ -597,8 +599,9 @@
     "                image_x = out_x = 0\n",
     "                while image_x + self.filter_dimension <= input_dimensions[2]:\n",
     "                    image_slice = image[i, :, image_x: image_x+self.filter_dimension, image_y: image_y+self.filter_dimension]\n",
-    "                    output[i, :, out_x, out_y] = np.max(image_slice, axis=(1, 2))\n",
-    "                    # self.index_tracker[i, out_x, out_y, :] = np.argmax(image[i, image_x: image_x+self.filter_dimension, image_y: image_y+self.filter_dimension, :], axis=(0, 1))\n",
+    "                    max_val = np.max(image_slice, axis=(1, 2))\n",
+    "                    output[i, :, out_x, out_y] = max_val\n",
+    "                    self.mask[i, :, image_x: image_x+self.filter_dimension, image_y: image_y+self.filter_dimension] = image_slice == max_val.reshape(input_dimensions[1], 1, 1)\n",
     "                    image_x += self.stride\n",
     "                    out_x += 1\n",
     "                image_y += self.stride\n",
@@ -606,8 +609,22 @@
     "\n",
     "        return output\n",
     "\n",
-    "    def backward(self):\n",
-    "        pass"
+    "    def backward(self, dh:np.ndarray) -> np.ndarray:\n",
+    "        output = np.zeros(self.input_dimensions)\n",
+    "\n",
+    "        for i in range(self.input_dimensions[0]):\n",
+    "            out_y = dh_y = 0\n",
+    "            while out_y + self.filter_dimension <= self.input_dimensions[3]:\n",
+    "                out_x = dh_x = 0\n",
+    "                while out_x + self.filter_dimension <= self.input_dimensions[2]:\n",
+    "                    mask_patch = self.mask[i, :, out_x: out_x+self.filter_dimension, out_y: out_y+self.filter_dimension]\n",
+    "                    output[i, :, out_x: out_x+self.filter_dimension, out_y: out_y+self.filter_dimension] += mask_patch * dh[i, :, dh_x, dh_y].reshape(self.input_dimensions[1], 1, 1)\n",
+    "                    out_x += self.stride\n",
+    "                    dh_x += 1\n",
+    "                out_y += self.stride\n",
+    "                dh_y += 1\n",
+    "\n",
+    "        return output"
    ],
    "metadata": {
     "collapsed": false,
@@ -682,7 +699,8 @@
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    def forward(self, image: np.ndarray) -> np.ndarray:\n",
+    "    @staticmethod\n",
+    "    def forward(image: np.ndarray) -> np.ndarray:\n",
     "        return image.flatten().reshape(-1, 1)\n",
     "\n",
     "    def backward(self):\n",
@@ -905,7 +923,8 @@
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
-    "    def forward(self, input_matrix: np.ndarray) -> np.ndarray:\n",
+    "    @staticmethod\n",
+    "    def forward(input_matrix: np.ndarray) -> np.ndarray:\n",
     "        exp = np.exp(input_matrix)\n",
     "        exp /= np.sum(exp)\n",
     "        return exp\n",
@@ -1170,7 +1189,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Main Test"
+    "#### MaxPooling Layer"
    ],
    "metadata": {
     "collapsed": false
@@ -1182,9 +1201,65 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7f89ea87ac40>"
+      "text/plain": "(50, 4, 2, 2)"
      },
      "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_maxpool_back = test_maxpool.backward(test_flattening_back)\n",
+    "test_flattening_back.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 0.        ,  0.        ,  0.        ],\n       [ 0.        , -0.38233334,  0.        ],\n       [ 0.        ,  0.        ,  0.        ]])"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_maxpool_back[0, 0, :, :]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Main Test"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<matplotlib.image.AxesImage at 0x7fba88470370>"
+     },
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1213,60 +1288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(64, 6, 28, 28)\n"
-     ]
-    }
-   ],
-   "source": [
-    "m = parse_input_model()\n",
-    "c1 = ConvolutionLayerBatch(6, 5, 1, 2)\n",
-    "mnist_batch_1 = x_train[0:64].reshape(64, 28, 28, 1)\n",
-    "o = c1.forward(mnist_batch_1)\n",
-    "print(o.shape)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[5.13991021e-01, 5.13991021e-01, 2.34726495e+00, 6.22690095e+00,\n        1.12072901e+01, 1.88108206e+01, 3.38048208e+01, 4.77333037e+01,\n        6.16420428e+01, 7.92249902e+01, 1.01786992e+02, 1.21545266e+02,\n        1.28731697e+02, 1.37192884e+02, 1.41634120e+02, 1.42932379e+02,\n        1.29960855e+02, 1.16581002e+02, 9.55354550e+01, 7.46750801e+01,\n        5.01304588e+01, 3.25171184e+01, 2.02950790e+01, 1.41210649e+01,\n        8.04039959e+00, 2.75846706e+00, 5.13991021e-01, 5.13991021e-01],\n       [4.87361328e-02, 4.87361328e-02, 1.88201006e+00, 5.76164606e+00,\n        1.07420352e+01, 1.83455657e+01, 3.33395659e+01, 4.72680488e+01,\n        6.11767879e+01, 7.87597353e+01, 1.01321737e+02, 1.21080011e+02,\n        1.28266442e+02, 1.36727629e+02, 1.41168866e+02, 1.42467124e+02,\n        1.29495600e+02, 1.16115747e+02, 9.50702001e+01, 7.42098252e+01,\n        4.96652039e+01, 3.20518635e+01, 1.98298241e+01, 1.36558100e+01,\n        7.57514470e+00, 2.29321217e+00, 4.87361328e-02, 4.87361328e-02],\n       [6.20273616e-01, 6.20273616e-01, 2.45354755e+00, 6.33318354e+00,\n        1.13135727e+01, 1.89171032e+01, 3.39111034e+01, 4.78395863e+01,\n        6.17483254e+01, 7.93312728e+01, 1.01893275e+02, 1.21651549e+02,\n        1.28837980e+02, 1.37299166e+02, 1.41740403e+02, 1.43038661e+02,\n        1.30067138e+02, 1.16687284e+02, 9.56417376e+01, 7.47813627e+01,\n        5.02367414e+01, 3.26234010e+01, 2.04013616e+01, 1.42273475e+01,\n        8.14668219e+00, 2.86474965e+00, 6.20273616e-01, 6.20273616e-01],\n       [1.67393803e-01, 1.67393803e-01, 2.00066774e+00, 5.88030373e+00,\n        1.08606929e+01, 1.84642234e+01, 3.34582236e+01, 4.73867065e+01,\n        6.12954456e+01, 7.88783930e+01, 1.01440395e+02, 1.21198669e+02,\n        1.28385100e+02, 1.36846287e+02, 1.41287523e+02, 1.42585781e+02,\n        1.29614258e+02, 1.16234405e+02, 9.51888578e+01, 7.43284829e+01,\n        4.97838616e+01, 3.21705212e+01, 1.99484817e+01, 1.37744677e+01,\n        7.69380237e+00, 2.41186984e+00, 1.67393803e-01, 1.67393803e-01],\n       [6.35028362e-01, 6.35028362e-01, 2.46830229e+00, 6.34793829e+00,\n        1.13283275e+01, 1.89318579e+01, 3.39258581e+01, 4.78543410e+01,\n        6.17630802e+01, 7.93460275e+01, 1.01908029e+02, 1.21666303e+02,\n        1.28852734e+02, 1.37313921e+02, 1.41755158e+02, 1.43053416e+02,\n        1.30081892e+02, 1.16702039e+02, 9.56564923e+01, 7.47961174e+01,\n        5.02514962e+01, 3.26381558e+01, 2.04161163e+01, 1.42421022e+01,\n        8.16143693e+00, 2.87950440e+00, 6.35028362e-01, 6.35028362e-01],\n       [9.62639272e-01, 9.62639272e-01, 2.79591320e+00, 6.67554920e+00,\n        1.16559384e+01, 1.92594689e+01, 3.42534690e+01, 4.81819519e+01,\n        6.20906911e+01, 7.96736384e+01, 1.02235640e+02, 1.21993914e+02,\n        1.29180345e+02, 1.37641532e+02, 1.42082769e+02, 1.43381027e+02,\n        1.30409503e+02, 1.17029650e+02, 9.59841032e+01, 7.51237284e+01,\n        5.05791071e+01, 3.29657667e+01, 2.07437272e+01, 1.45697131e+01,\n        8.48904784e+00, 3.20711531e+00, 9.62639272e-01, 9.62639272e-01]])"
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "o[0, :, :, 0]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "outputs": [
     {
      "data": {
-      "text/plain": "(64, 6, 28, 28)"
+      "text/plain": "(64, 1, 28, 28)"
      },
      "execution_count": 42,
      "metadata": {},
@@ -1274,82 +1300,9 @@
     }
    ],
    "source": [
-    "a1 = ActivationLayer()\n",
-    "o1 = a1.forward(o)\n",
-    "o1.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(64, 6, 14, 14)"
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m1 = MaxPoolingLayerBatch(2, 2)\n",
-    "o2 = m1.forward(o1)\n",
-    "o2.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[ 1,  2,  3,  4],\n        [ 5,  6,  7,  8],\n        [ 9, 10, 11, 12]],\n\n       [[13, 14, 15, 16],\n        [17, 18, 19, 20],\n        [21, 22, 23, 24]]])"
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.arange(1,25).reshape(2, 3, 4)\n",
-    "x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([12, 24])"
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y = np.max(x, axis=(1, 2))\n",
-    "y"
+    "m = parse_input_model()\n",
+    "mnist_batch_1 = x_train[0:64].reshape(64, 1, 28, 28)\n",
+    "mnist_batch_1.shape"
    ],
    "metadata": {
     "collapsed": false,
