Converted a loop in conv back to not loop

--- a/Offline 3/1605053.ipynb
+++ b/Offline 3/1605053.ipynb
@@ -418,6 +418,7 @@
     "\n",
     "        dw = np.zeros(self.filters.shape)\n",
     "        dout_padded = np.zeros(padded_dimensions)\n",
+    "        filter_shape = self.filters.shape\n",
     "\n",
     "        for i in range(batch_size):\n",
     "            tmp_y = out_y = 0\n",
@@ -426,8 +427,9 @@
     "                while tmp_x + self.filter_dimension <= padded_dimensions[2]:\n",
     "                    image_slice = padded_image[i, :, tmp_x: tmp_x+self.padding, tmp_y:tmp_y+self.padding]\n",
     "                    dw += np.sum(dz[i, :, out_x, out_y].reshape(self.output_channel_count, 1, 1) * image_slice)\n",
-    "                    for f in range(self.output_channel_count):\n",
-    "                        dout_padded[i, :, tmp_x: tmp_x+self.padding, tmp_y:tmp_y+self.padding] += dz[i, f, out_x, out_y] * self.filters[f, :, :, :]\n",
+    "                    dout_padded[i, :, tmp_x: tmp_x+self.padding, tmp_y:tmp_y+self.padding] += np.sum(np.broadcast_to(dz[i, :, out_x, out_y].reshape(self.output_channel_count, padded_dimensions[1], 1, 1), filter_shape) * self.filters, axis=0)\n",
+    "                    # for f in range(self.output_channel_count):\n",
+    "                    #     dout_padded[i, :, tmp_x: tmp_x+self.padding, tmp_y:tmp_y+self.padding] += dz[i, f, out_x, out_y] * self.filters[f, :, :, :]\n",
     "                    tmp_x += self.stride\n",
     "                    out_x += 1\n",
     "                tmp_y += self.stride\n",
@@ -1380,13 +1382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[0.22139944, 0.10610052],\n       [0.09791621, 0.34521246]])"
      },
-     "execution_count": 51,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,13 +1414,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7f99f042abe0>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f89771d5d00>"
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1447,13 +1449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
       "text/plain": "(64, 1, 28, 28)"
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,101 +1464,6 @@
     "m = parse_input_model()\n",
     "mnist_batch_1 = x_train[0:64].reshape(64, 1, 28, 28)\n",
     "mnist_batch_1.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[[ 1,  2],\n         [ 3,  4]]],\n\n\n       [[[ 5,  6],\n         [ 7,  8]]],\n\n\n       [[[ 9, 10],\n         [11, 12]]],\n\n\n       [[[13, 14],\n         [15, 16]]]])"
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.arange(1, 17).reshape(4, 1, 2, 2)\n",
-    "x"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[[-1]]],\n\n\n       [[[ 0]]],\n\n\n       [[[ 1]]],\n\n\n       [[[ 2]]]])"
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y = np.arange(-1,3).reshape(4,1,1,1)\n",
-    "y"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[[-1, -1],\n         [-1, -1]]],\n\n\n       [[[ 0,  0],\n         [ 0,  0]]],\n\n\n       [[[ 1,  1],\n         [ 1,  1]]],\n\n\n       [[[ 2,  2],\n         [ 2,  2]]]])"
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z = np.broadcast_to(y, (4, 1, 2, 2))\n",
-    "z"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[[-1, -2],\n         [-3, -4]]],\n\n\n       [[[ 0,  0],\n         [ 0,  0]]],\n\n\n       [[[ 9, 10],\n         [11, 12]]],\n\n\n       [[[26, 28],\n         [30, 32]]]])"
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x * z"
    ],
    "metadata": {
     "collapsed": false,
