Hopefully working. Need to incorporate validation and test

--- a/Offline 3/1605053.ipynb
+++ b/Offline 3/1605053.ipynb
@@ -426,9 +426,8 @@
     "                tmp_x = out_x = 0\n",
     "                while tmp_x + self.filter_dimension <= padded_dimensions[2]:\n",
     "                    image_slice = padded_image[i, :, tmp_x: tmp_x+self.filter_dimension, tmp_y:tmp_y+self.filter_dimension]\n",
-    "                    # dw += np.sum(dz[i, :, out_x, out_y].reshape(self.output_channel_count, 1, 1) * image_slice)\n",
-    "                    # dout_padded[i, :, tmp_x: tmp_x+self.filter_dimension, tmp_y:tmp_y+self.filter_dimension] += np.sum(np.broadcast_to(dz[i, :, out_x, out_y].reshape(self.output_channel_count, padded_dimensions[1], 1, 1), filter_shape) * self.filters, axis=0)\n",
     "                    for f in range(self.output_channel_count):\n",
+    "                        dw[f, :, :, :] += np.sum(dz[i, f, out_x, out_y] * image_slice, axis=0)\n",
     "                        dout_padded[i, :, tmp_x: tmp_x+self.filter_dimension, tmp_y:tmp_y+self.filter_dimension] += dz[i, f, out_x, out_y] * self.filters[f, :, :, :]\n",
     "                    tmp_x += self.stride\n",
     "                    out_x += 1\n",
@@ -1418,7 +1417,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fbd7dd5ed30>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7f8dbb3c3e20>"
      },
      "execution_count": 46,
      "metadata": {},
@@ -1503,35 +1502,190 @@
      "output_type": "stream",
      "text": [
       "Epoc 0 batch 0 loss = 2.302532296198772\n",
-      "Epoc 0 batch 1 loss = 2.3025858864948385\n",
-      "Epoc 0 batch 2 loss = 2.302648214453312\n",
-      "Epoc 0 batch 3 loss = 2.3024853203457747\n",
-      "Epoc 0 batch 4 loss = 2.302640144174545\n",
-      "Epoc 0 batch 5 loss = 2.3024702054266513\n",
-      "Epoc 0 batch 6 loss = 2.3025440658683465\n",
-      "Epoc 0 batch 7 loss = 2.302467885284111\n",
-      "Epoc 0 batch 8 loss = 2.3026356350740254\n",
-      "Epoc 0 batch 9 loss = 2.3025587321837917\n",
-      "Epoc 0 batch 10 loss = 2.3026059158003456\n",
-      "Epoc 0 batch 11 loss = 2.302789039378776\n",
-      "Epoc 0 batch 12 loss = 2.3026724927579707\n",
-      "Epoc 0 batch 13 loss = 2.3026834226779\n",
-      "Epoc 0 batch 14 loss = 2.302521746670356\n",
-      "Epoc 0 batch 15 loss = 2.3023209063146997\n",
-      "Epoc 0 batch 16 loss = 2.3023117386542533\n",
-      "Epoc 0 batch 17 loss = 2.302566159987611\n",
-      "Epoc 0 batch 18 loss = 2.302169001902477\n",
-      "Epoc 0 batch 19 loss = 2.302492605349512\n",
-      "Epoc 0 batch 20 loss = 2.302657510111539\n"
+      "Epoc 0 batch 1 loss = 2.302585886640407\n",
+      "Epoc 0 batch 2 loss = 2.3026482148014678\n",
+      "Epoc 0 batch 3 loss = 2.3024853228488267\n",
+      "Epoc 0 batch 4 loss = 2.302640142998148\n",
+      "Epoc 0 batch 5 loss = 2.3024702039546234\n",
+      "Epoc 0 batch 6 loss = 2.302544065469859\n",
+      "Epoc 0 batch 7 loss = 2.3024678876351814\n",
+      "Epoc 0 batch 8 loss = 2.302635635922412\n",
+      "Epoc 0 batch 9 loss = 2.302558731429534\n",
+      "Epoc 0 batch 10 loss = 2.302605916135814\n",
+      "Epoc 0 batch 11 loss = 2.302789039771694\n",
+      "Epoc 0 batch 12 loss = 2.3026724936205585\n",
+      "Epoc 0 batch 13 loss = 2.302683424425382\n",
+      "Epoc 0 batch 14 loss = 2.302521746069071\n",
+      "Epoc 0 batch 15 loss = 2.3023209076243343\n",
+      "Epoc 0 batch 16 loss = 2.3023117374723334\n",
+      "Epoc 0 batch 17 loss = 2.302566162226919\n",
+      "Epoc 0 batch 18 loss = 2.3021689986531646\n",
+      "Epoc 0 batch 19 loss = 2.302492604020218\n",
+      "Epoc 0 batch 20 loss = 2.302657515498459\n",
+      "Epoc 0 batch 21 loss = 2.302715442503602\n",
+      "Epoc 0 batch 22 loss = 2.302556263713475\n",
+      "Epoc 0 batch 23 loss = 2.302703517100053\n",
+      "Epoc 0 batch 24 loss = 2.3026898938422478\n",
+      "Epoc 0 batch 25 loss = 2.302185365753057\n",
+      "Epoc 0 batch 26 loss = 2.3023763399923998\n",
+      "Epoc 0 batch 27 loss = 2.3028131747303897\n",
+      "Epoc 0 batch 28 loss = 2.3023024010026236\n",
+      "Epoc 0 batch 29 loss = 2.3027003605237146\n",
+      "Epoc 0 batch 30 loss = 2.3024246640687513\n",
+      "Epoc 0 batch 31 loss = 2.302720457880362\n",
+      "Epoc 0 batch 32 loss = 2.3026901855537503\n",
+      "Epoc 0 batch 33 loss = 2.3024833964914837\n",
+      "Epoc 0 batch 34 loss = 2.3022180690602334\n",
+      "Epoc 0 batch 35 loss = 2.3028836158916164\n",
+      "Epoc 0 batch 36 loss = 2.302336029836191\n",
+      "Epoc 0 batch 37 loss = 2.3026700351633274\n",
+      "Epoc 0 batch 38 loss = 2.3019475446779687\n",
+      "Epoc 0 batch 39 loss = 2.302796691298356\n",
+      "Epoc 0 batch 40 loss = 2.302387639166599\n",
+      "Epoc 0 batch 41 loss = 2.302966192144971\n",
+      "Epoc 0 batch 42 loss = 2.3020485634998735\n",
+      "Epoc 0 batch 43 loss = 2.302134971911025\n",
+      "Epoc 0 batch 44 loss = 2.3018706159928155\n",
+      "Epoc 0 batch 45 loss = 2.3023493171379807\n",
+      "Epoc 0 batch 46 loss = 2.3029147606854874\n",
+      "Epoc 0 batch 47 loss = 2.3027227713591576\n",
+      "Epoc 0 batch 48 loss = 2.3021962303299484\n",
+      "Epoc 0 batch 49 loss = 2.303091796539581\n",
+      "Epoc 0 batch 50 loss = 2.301942367210631\n",
+      "Epoc 0 batch 51 loss = 2.3027076827653907\n",
+      "Epoc 0 batch 52 loss = 2.302327722267795\n",
+      "Epoc 0 batch 53 loss = 2.302123324101858\n",
+      "Epoc 0 batch 54 loss = 2.3022616283510047\n",
+      "Epoc 0 batch 55 loss = 2.302830439780987\n",
+      "Epoc 0 batch 56 loss = 2.302431471290318\n",
+      "Epoc 0 batch 57 loss = 2.3036001651083473\n",
+      "Epoc 0 batch 58 loss = 2.301808297280368\n",
+      "Epoc 0 batch 59 loss = 2.3022079587203574\n",
+      "Epoc 0 batch 60 loss = 2.302284776729313\n",
+      "Epoc 0 batch 61 loss = 2.302101976418013\n",
+      "Epoc 0 batch 62 loss = 2.302871783237994\n",
+      "Epoc 0 batch 63 loss = 2.3025753086997836\n",
+      "Epoc 0 batch 64 loss = 2.302092802036221\n",
+      "Epoc 0 batch 65 loss = 2.302073940793033\n",
+      "Epoc 0 batch 66 loss = 2.302137619625288\n",
+      "Epoc 0 batch 67 loss = 2.302402977112701\n",
+      "Epoc 0 batch 68 loss = 2.3019984605966575\n",
+      "Epoc 0 batch 69 loss = 2.3020634163618925\n",
+      "Epoc 0 batch 70 loss = 2.3021934501380614\n",
+      "Epoc 0 batch 71 loss = 2.3021092077657586\n",
+      "Epoc 0 batch 72 loss = 2.3031405053021556\n",
+      "Epoc 0 batch 73 loss = 2.3028977911474815\n",
+      "Epoc 0 batch 74 loss = 2.3013251668388692\n",
+      "Epoc 0 batch 75 loss = 2.3023653106673563\n",
+      "Epoc 0 batch 76 loss = 2.301477555771779\n",
+      "Epoc 0 batch 77 loss = 2.3015162695073634\n",
+      "Epoc 0 batch 78 loss = 2.301781584446111\n",
+      "Epoc 0 batch 79 loss = 2.30260598870371\n",
+      "Epoc 0 batch 80 loss = 2.3018477331931626\n",
+      "Epoc 0 batch 81 loss = 2.3023918977044593\n",
+      "Epoc 0 batch 82 loss = 2.3022191648366714\n",
+      "Epoc 0 batch 83 loss = 2.302210358788226\n",
+      "Epoc 0 batch 84 loss = 2.303551449150098\n",
+      "Epoc 0 batch 85 loss = 2.3022153517139494\n",
+      "Epoc 0 batch 86 loss = 2.3022598128904646\n",
+      "Epoc 0 batch 87 loss = 2.3025825969055753\n",
+      "Epoc 0 batch 88 loss = 2.302164363599034\n",
+      "Epoc 0 batch 89 loss = 2.302782997073489\n",
+      "Epoc 0 batch 90 loss = 2.3014076629060973\n",
+      "Epoc 0 batch 91 loss = 2.302504602317157\n",
+      "Epoc 0 batch 92 loss = 2.3028727707073537\n",
+      "Epoc 0 batch 93 loss = 2.301478436830511\n",
+      "Epoc 0 batch 94 loss = 2.3023631813539325\n",
+      "Epoc 0 batch 95 loss = 2.300987587730371\n",
+      "Epoc 0 batch 96 loss = 2.303434296889713\n",
+      "Epoc 0 batch 97 loss = 2.3014061352686452\n",
+      "Epoc 0 batch 98 loss = 2.302732987447857\n",
+      "Epoc 0 batch 99 loss = 2.3029049882701185\n",
+      "Epoc 0 batch 100 loss = 2.302369224140577\n",
+      "Epoc 0 batch 101 loss = 2.303528644639653\n",
+      "Epoc 0 batch 102 loss = 2.3013226090516676\n",
+      "Epoc 0 batch 103 loss = 2.3028088913411153\n",
+      "Epoc 0 batch 104 loss = 2.3011504335469812\n",
+      "Epoc 0 batch 105 loss = 2.3027152132622666\n",
+      "Epoc 0 batch 106 loss = 2.3032824843077515\n",
+      "Epoc 0 batch 107 loss = 2.301788966253736\n",
+      "Epoc 0 batch 108 loss = 2.3023314473203857\n",
+      "Epoc 0 batch 109 loss = 2.303009563720721\n",
+      "Epoc 0 batch 110 loss = 2.302436586386073\n",
+      "Epoc 0 batch 111 loss = 2.3034199697491675\n",
+      "Epoc 0 batch 112 loss = 2.3017773230887153\n",
+      "Epoc 0 batch 113 loss = 2.3033111428043216\n",
+      "Epoc 0 batch 114 loss = 2.3027630399540793\n",
+      "Epoc 0 batch 115 loss = 2.3018346645766736\n",
+      "Epoc 0 batch 116 loss = 2.303759327535821\n",
+      "Epoc 0 batch 117 loss = 2.3018357722431704\n",
+      "Epoc 0 batch 118 loss = 2.301657036027809\n",
+      "Epoc 0 batch 119 loss = 2.30137580812789\n",
+      "Epoc 0 batch 120 loss = 2.302384087864105\n",
+      "Epoc 0 batch 121 loss = 2.301037485691041\n",
+      "Epoc 0 batch 122 loss = 2.302348458451976\n",
+      "Epoc 0 batch 123 loss = 2.303376373402643\n",
+      "Epoc 0 batch 124 loss = 2.30229911554364\n",
+      "Epoc 0 batch 125 loss = 2.302979595127712\n",
+      "Epoc 0 batch 126 loss = 2.3008861073723117\n",
+      "Epoc 0 batch 127 loss = 2.300506866321093\n",
+      "Epoc 0 batch 128 loss = 2.3015857139135067\n",
+      "Epoc 0 batch 129 loss = 2.3021549124532035\n",
+      "Epoc 0 batch 130 loss = 2.3011753588227615\n",
+      "Epoc 0 batch 131 loss = 2.30243302541561\n",
+      "Epoc 0 batch 132 loss = 2.3014332504876576\n",
+      "Epoc 0 batch 133 loss = 2.300617637337833\n",
+      "Epoc 0 batch 134 loss = 2.301099769260326\n",
+      "Epoc 0 batch 135 loss = 2.3028088218181093\n",
+      "Epoc 0 batch 136 loss = 2.304410723995664\n",
+      "Epoc 0 batch 137 loss = 2.3004571254090567\n",
+      "Epoc 0 batch 138 loss = 2.3024342939779237\n",
+      "Epoc 0 batch 139 loss = 2.3023302528443077\n",
+      "Epoc 0 batch 140 loss = 2.300398227747813\n",
+      "Epoc 0 batch 141 loss = 2.302801472077152\n",
+      "Epoc 0 batch 142 loss = 2.3024235733209215\n",
+      "Epoc 0 batch 143 loss = 2.303470166326586\n",
+      "Epoc 0 batch 144 loss = 2.3011023224800318\n",
+      "Epoc 0 batch 145 loss = 2.302526215544174\n",
+      "Epoc 0 batch 146 loss = 2.3039141008410704\n",
+      "Epoc 0 batch 147 loss = 2.301161693625291\n",
+      "Epoc 0 batch 148 loss = 2.3015119679241263\n",
+      "Epoc 0 batch 149 loss = 2.3020311516839156\n",
+      "Epoc 0 batch 150 loss = 2.3013866310406224\n",
+      "Epoc 0 batch 151 loss = 2.3014690463531298\n",
+      "Epoc 0 batch 152 loss = 2.303119039802647\n",
+      "Epoc 0 batch 153 loss = 2.3036577957237467\n",
+      "Epoc 0 batch 154 loss = 2.3005949989658596\n",
+      "Epoc 0 batch 155 loss = 2.303209413300018\n",
+      "Epoc 1 batch 0 loss = 2.3014876940891202\n",
+      "Epoc 1 batch 1 loss = 2.2989900460787345\n",
+      "Epoc 1 batch 2 loss = 2.3030784331248966\n",
+      "Epoc 1 batch 3 loss = 2.300287695057343\n",
+      "Epoc 1 batch 4 loss = 2.303165090704291\n",
+      "Epoc 1 batch 5 loss = 2.3017706701838176\n",
+      "Epoc 1 batch 6 loss = 2.302269977353766\n",
+      "Epoc 1 batch 7 loss = 2.30010329342489\n",
+      "Epoc 1 batch 8 loss = 2.303243146266832\n",
+      "Epoc 1 batch 9 loss = 2.302375724667445\n",
+      "Epoc 1 batch 10 loss = 2.301772617277682\n",
+      "Epoc 1 batch 11 loss = 2.3038117550858894\n",
+      "Epoc 1 batch 12 loss = 2.30361905367479\n",
+      "Epoc 1 batch 13 loss = 2.302029278704051\n",
+      "Epoc 1 batch 14 loss = 2.3022072300076664\n",
+      "Epoc 1 batch 15 loss = 2.300132569715771\n",
+      "Epoc 1 batch 16 loss = 2.301341159058434\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [49]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     17\u001B[0m model_back \u001B[38;5;241m=\u001B[39m true_labels\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m layer \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mreversed\u001B[39m(model):\n\u001B[1;32m     19\u001B[0m     \u001B[38;5;66;03m# print(layer)\u001B[39;00m\n\u001B[0;32m---> 20\u001B[0m     model_back \u001B[38;5;241m=\u001B[39m \u001B[43mlayer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel_back\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[0;32mIn [13]\u001B[0m, in \u001B[0;36mConvolutionLayerBatch.backward\u001B[0;34m(self, dz, learning_rate)\u001B[0m\n\u001B[1;32m     66\u001B[0m \u001B[38;5;66;03m# dw += np.sum(dz[i, :, out_x, out_y].reshape(self.output_channel_count, 1, 1) * image_slice)\u001B[39;00m\n\u001B[1;32m     67\u001B[0m \u001B[38;5;66;03m# dout_padded[i, :, tmp_x: tmp_x+self.filter_dimension, tmp_y:tmp_y+self.filter_dimension] += np.sum(np.broadcast_to(dz[i, :, out_x, out_y].reshape(self.output_channel_count, padded_dimensions[1], 1, 1), filter_shape) * self.filters, axis=0)\u001B[39;00m\n\u001B[1;32m     68\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m f \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39moutput_channel_count):\n\u001B[0;32m---> 69\u001B[0m     dw[f, :, :, :] \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msum(dz[i, f, out_x, out_y] \u001B[38;5;241m*\u001B[39m image_slice, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m)\n\u001B[1;32m     70\u001B[0m     dout_padded[i, :, tmp_x: tmp_x\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfilter_dimension, tmp_y:tmp_y\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfilter_dimension] \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m dz[i, f, out_x, out_y] \u001B[38;5;241m*\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfilters[f, :, :, :]\n\u001B[1;32m     71\u001B[0m tmp_x \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstride\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
